67-change of the favicon

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="icon" href="/logo1_bleuvert.png" />
-    <link rel="apple-touch-icon" href="/logo1_bleuvert.png" />
+    <link rel="icon" href="/logo1_noir.pg" />
+    <link rel="apple-touch-icon" href="/logo1_noir.png" />
     <link rel="manifest" href="/manifest.json" />
 
     <title>O'Book Groove</title>
