--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="icon" href="/logo1_noir.pg" />
+    <link rel="icon" href="/logo1_noir.png" />
     <link rel="apple-touch-icon" href="/logo1_noir.png" />
     <link rel="manifest" href="/manifest.json" />
 
